--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 07-26-04: R.E.E.D: Better error checking. Couldn't break guilds. [AlexKreuz]
- 07-26-04: R.E.E.D: Guild member data properly saved. [AlexKreuz]
- 07-26-04: Guild Expel kicked wrong person. Bad Index. (R.E.E.D related?). [AlexKreuz]
- 07-26-04: Added optional map unloading beta.  [Darkhelmet]
- 07-26-04: Added .ini Option in [Toys] MapUnloadTime=<time in minutes>.  [Darkhelmet]
- 07-26-04: PVP ranking works now. [Trihan]
- 07-23-04: R.E.E.D: Conversion refined. Will not convert empty guilds. [AlexKreuz]
- 07-23-04: R.E.E.D: Guilds being deleted on new user connect. [AlexKreuz]
- 07-23-04: R.E.E.D: Upper classes were converting into novices. [AlexKreuz]
- 07-23-04: PlayerDataLoad() made obsolete by R.E.E.D. [AlexKreuz]
- 07-23-04: R.E.E.D case insensitive duplicate characters not converted. [AlexKreuz]
- 07-23-04: ALBGM_NEWPLAYER fixed after R.E.E.D conflict occured. [AlexKreuz]
- 07-23-04: JCon Account Creator fixed after R.E.E.D conflict occured. [AlexKreuz]
- 07-23-04: addplayer.txt fixed after R.E.E.D conflict occured. [AlexKreuz]
- 07-23-04: _M/_F fixed after R.E.E.D conflict occured. [AlexKreuz]
- 07-23-04: Sorting of Player/Chara lists. [AlexKreuz]
- 07-23-04: R.E.E.D auto-creation of structure. [AlexKreuz]
- 07-23-04: Fixed guild exp calculation. Broke with R.E.E.D. [AlexKreuz]
- 07-23-04: Fixed guild Maxusers calculation. Broke with R.E.E.D. [AlexKreuz]
- 07-23-04: R.E.E.D: Multiple membership in parties fixed. [AlexKreuz]
- 07-23-04: R.E.E.D: Multiple membership in guilds fixed. [AlexKreuz]
- 07-23-04: R.E.E.D: Castles with invalid guilds cleared. [AlexKreuz]
- 07-23-04: R.E.E.D: Invalid Guild members cleared. [AlexKreuz]
- 07-23-04: R.E.E.D: Invalid Party members cleared. [AlexKreuz]
- 07-23-04: R.E.E.D: Guild leader reassigned if leader invalid. [AlexKreuz]