@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
+- 07-27-04: Added check for duplicate account logging in.  [Darkhelmet]
 - 07-26-04: R.E.E.D: Better error checking. Couldn't break guilds. [AlexKreuz]
 - 07-26-04: R.E.E.D: Guild member data properly saved. [AlexKreuz]
 - 07-26-04: Guild Expel kicked wrong person. Bad Index. (R.E.E.D related?). [AlexKreuz]
